--- a/index.html
+++ b/index.html
@@ -1,32 +1,47 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning Vue</title>
+    <script src="https://unpkg.com/vue@3.0.0"></script>
+    <style>
+      .box {
+        padding: 100px 0;
+        width: 400px;
+        text-align: center;
+        background: #ddd;
+        margin: 20px;
+        display: inline-block;
+      }
+    </style>
   </head>
   <body>
     <h1>Hello, Vue :)</h1>
+
     <div id="app">
+      <!-- attribute binding -->
+      <!-- <a v-bind:href="url">Best website ever!</a> -->
+      <a :href="url">Best website ever!</a>
+
       <div v-if="showBooks">
-        <p>{{ title }} - by {{ author }}, {{ age }} years old</p>
+        <ul>
+          <li v-for="book in books">
+            <img :src="book.img" :alt="book.title" />
+            <h3>{{ book.title }}</h3>
+            <p>{{ book.author }}</p>
+          </li>
+        </ul>
       </div>
       <div v-else>
         <p>Click the button below to show books</p>
       </div>
 
       <button @click="toggleShowBooks">
-        <!-- Toggle books -->
         <span v-if="showBooks">Hide books</span>
         <span v-else>Show books</span>
       </button>
-
-      <div v-show="showBooks">currently showing books</div>
     </div>
-    <!-- MODELS -->
-    <script src="https://unpkg.com/vue@3.0.2"></script>
-    <!-- IMPORT SCRIPTS -->
+
     <script src="app.js"></script>
   </body>
 </html>
